# nn

./: .gitignore  LICENSE  flake.nix  nn.cabal
src/: Layer.hs  Lib.hs
