cabal-version:   3.12
name:            nn
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Harry Maclean
maintainer:      harry@hmac.dev
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
                      Layer
    build-depends:    base ^>=4.18.2.1,
                      profunctors
    hs-source-dirs:   src
    default-language: Haskell2010
